# AIRS-env

./: .gitignore  Dockerfile  README.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  tmp_test_deployed.py  tmp_val.py  tmp_validator.py  trigger.txt
api/: main.py
baseline/: run.py
core/: environment.py  simulator.py
data/: incidents_v1.json
evaluation/: grader.py
server/: app.py
